RESOLVED FIXED268906
REGRESSION(273906@main): [GStreamer] webrtc/receiver-track-should-stay-live-even-if-receiver-is-inactive.html is flaky crash
https://bugs.webkit.org/show_bug.cgi?id=268906
Summary REGRESSION(273906@main): [GStreamer] webrtc/receiver-track-should-stay-live-e...
Philippe Normand
Reported 2024-02-07 03:14:11 PST
Thread 1 (Thread 0x7f2d36ffd6c0 (LWP 873598)): #0 g_logv (log_domain=0x7f482583f9ae "GStreamer", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7f2d36ffbba0) at ../glib/gmessages.c:1422 #1 0x00007f4828d1f7a3 in g_log (log_domain=log_domain@entry=0x7f482583f9ae "GStreamer", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7f4828d77f92 "%s: assertion '%s' failed") at ../glib/gmessages.c:1460 #2 0x00007f4828d2261d in g_return_if_fail_warning (log_domain=log_domain@entry=0x7f482583f9ae "GStreamer", pretty_function=pretty_function@entry=0x7f4825862d80 <__func__.29.lto_priv.4> "gst_caps_get_structure", expression=expression@entry=0x7f48258456dd "GST_IS_CAPS (caps)") at ../glib/gmessages.c:2930 #3 0x00007f48257a4002 in gst_caps_get_structure (caps=<optimized out>, index=<optimized out>) at ../gst/gstcaps.c:886 #4 0x00007f483e93694f in WebCore::RealtimeOutgoingAudioSourceGStreamer::setPayloadType(WTF::GRefPtr<_GstCaps> const&) (this=0x7f4818746080, caps=...) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.cpp:60 #5 0x00007f483e93a429 in WebCore::RealtimeOutgoingMediaSourceGStreamer::codecPreferencesChanged(WTF::GRefPtr<_GstCaps> const&) (this=0x7f4818746080, codecPreferences=...) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:378 #6 0x00007f483e93a122 in operator()(GstPad*, GstPadProbeInfo*, gpointer) const (__closure=0x0, pad=0x7f2d2c016450, info=0x7f2d36ffc030, userData=0x7f4818746080) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:362 #7 0x00007f483e93a168 in _FUN(GstPad*, GstPadProbeInfo*, gpointer) () at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:365 #8 0x00007f48257dd53f in probe_hook_marshal (hook=0x7f2d2c005720, data=0x7f2d36ffbef0) at ../gst/gstpad.c:3692 #9 0x00007f4828cfaa07 in g_hook_list_marshal (hook_list=0x7f2d2c0164e8, may_recurse=1, marshaller=0x7f48257dd260 <probe_hook_marshal>, data=0x7f2d36ffbef0) at ../glib/ghook.c:674 #10 0x00007f48257ddbc8 in do_probe_callbacks (pad=pad@entry=0x7f2d2c016450, info=info@entry=0x7f2d36ffc030, defaultval=defaultval@entry=GST_FLOW_OK) at ../gst/gstpad.c:3876 #11 0x00007f48257e221a in gst_pad_push_event_unchecked (pad=pad@entry=0x7f2d2c016450, event=0x7f2d2c00ab60 [None], type=type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5544 #12 0x00007f48257e2518 in push_sticky (pad=pad@entry=0x7f2d2c016450, ev=ev@entry=0x7f2d36ffc140, user_data=user_data@entry=0x7f2d36ffc1b0) at ../gst/gstpad.c:4080 #13 0x00007f48257d6cc5 in events_foreach (pad=0x7f2d2c016450, func=0x7f48257e2470 <push_sticky>, user_data=0x7f2d36ffc1b0) at ../gst/gstpad.c:613 #14 0x00007f48257e55f1 in check_sticky (event=0x7f2d2c00ab60 [None], pad=0x7f2d2c016450) at ../gst/gstpad.c:4139 #15 gst_pad_push_event (pad=0x7f2d2c016450, event=0x7f2d2c00ab60 [None]) at ../gst/gstpad.c:5728 #16 0x00007f48257dc893 in event_forward_func (pad=pad@entry=0x7f2d2c016450, data=data@entry=0x7f2d36ffc2d0) at ../gst/gstpad.c:3153 #17 0x00007f48257dc60e in gst_pad_forward (pad=pad@entry=0x7f2d2c012c80, forward=forward@entry=0x7f48257dc7d0 <event_forward_func>, user_data=user_data@entry=0x7f2d36ffc2d0) at ../gst/gstpad.c:3107 #18 0x00007f48257dc6f9 in gst_pad_event_default (pad=0x7f2d2c012c80, parent=<optimized out>, event=0x7f2d2c00ab60 [None]) at ../gst/gstpad.c:3204 #19 0x00007f48257e166d in gst_pad_send_event_unchecked (pad=pad@entry=0x7f2d2c012c80, event=event@entry=0x7f2d2c00ab60 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5962 #20 0x00007f48257e1d53 in gst_pad_push_event_unchecked (pad=pad@entry=0x7f2d2c001da0, event=0x7f2d2c00ab60 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5595 #21 0x00007f48257e2518 in push_sticky (pad=pad@entry=0x7f2d2c001da0, ev=ev@entry=0x7f2d36ffc530, user_data=user_data@entry=0x7f2d36ffc5a0) at ../gst/gstpad.c:4080 #22 0x00007f48257d6cc5 in events_foreach (pad=0x7f2d2c001da0, func=0x7f48257e2470 <push_sticky>, user_data=0x7f2d36ffc5a0) at ../gst/gstpad.c:613 #23 0x00007f48257e55f1 in check_sticky (event=0x7f2d2c00ab60 [None], pad=0x7f2d2c001da0) at ../gst/gstpad.c:4139 #24 gst_pad_push_event (pad=0x7f2d2c001da0, event=0x7f2d2c00ab60 [None]) at ../gst/gstpad.c:5728 #25 0x00007f48256c374a in gst_audio_encoder_sink_event (pad=<optimized out>, parent=0x7f2d2c001830, event=0x7f2d2c00ab60 [None]) at ../gst-libs/gst/audio/gstaudioencoder.c:1767 #26 0x00007f48257e166d in gst_pad_send_event_unchecked (pad=pad@entry=0x7f2d2c012fe0, event=event@entry=0x7f2d2c00ab60 [None], type=<optimized out>) at ../gst/gstpad.c:5962 #27 0x00007f48257e580f in gst_pad_send_event (pad=0x7f2d2c012fe0, event=0x7f2d2c00ab60 [None]) at ../gst/gstpad.c:6132 #28 0x00007f483e93a2b3 in operator()(GstPad*, GstPadProbeInfo*, gpointer) const (__closure=0x0, pad=0x55cd4b461700, info=0x7f2d36ffc9c0, userData=0x7f4818746080) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:371 #29 0x00007f483e93a319 in _FUN(GstPad*, GstPadProbeInfo*, gpointer) () at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:374 #30 0x00007f48257dd53f in probe_hook_marshal (hook=0x55cd4b64ece0, data=0x7f2d36ffc890) at ../gst/gstpad.c:3692 #31 0x00007f4828cfaa07 in g_hook_list_marshal (hook_list=0x55cd4b461798, may_recurse=1, marshaller=0x7f48257dd260 <probe_hook_marshal>, data=0x7f2d36ffc890) at ../glib/ghook.c:674 #32 0x00007f48257ddbc8 in do_probe_callbacks (pad=pad@entry=0x55cd4b461700, info=info@entry=0x7f2d36ffc9c0, defaultval=defaultval@entry=GST_FLOW_OK) at ../gst/gstpad.c:3876 #33 0x00007f48257e320c in gst_pad_push_data (pad=pad@entry=0x55cd4b461700, type=type@entry=4112, data=data@entry=0x7f2d500146b0) at ../gst/gstpad.c:4740 #34 0x00007f48257e38c4 in gst_pad_push (pad=0x55cd4b461700, buffer=buffer@entry=0x7f2d500146b0 [None]) at ../gst/gstpad.c:4881 #35 0x00007f480c24fe69 in gst_queue_push_one (queue=0x55cd4b460f70) at ../plugins/elements/gstqueue.c:1388 #36 gst_queue_loop (pad=<optimized out>) at ../plugins/elements/gstqueue.c:1541 #37 0x00007f4825810204 in gst_task_func (task=0x55cd4b4fdfa0) at ../gst/gsttask.c:384 #38 0x00007f4828d4d4f2 in g_thread_pool_thread_proxy (data=<optimized out>) at ../glib/gthreadpool.c:350 #39 0x00007f4828d4a862 in g_thread_proxy (data=0x7f2fac001f90) at ../glib/gthread.c:831 #40 0x00007f4825fb8e39 in start_thread (arg=<optimized out>) at pthread_create.c:444 #41 0x00007f48260408c4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Attachments
Philippe Normand
Comment 1 2024-02-13 02:03:41 PST
*** Bug 268902 has been marked as a duplicate of this bug. ***
Philippe Normand
Comment 2 2024-02-13 02:56:54 PST
EWS
Comment 3 2024-02-14 02:24:02 PST
Committed 274614@main (518c5dcd9b48): <https://commits.webkit.org/274614@main> Reviewed commits have been landed. Closing PR #24334 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-02-14 02:25:15 PST
Note You need to log in before you can comment on or make changes to this bug.