Cherry-pick 274614@main (518c5dcd9b48). https://bugs.webkit.org/show_bug.cgi?id=268906

REGRESSION(273906@main): [GStreamer] webrtc/receiver-track-should-stay-live-even-if-receiver-is-inactive.html is flaky crash
    https://bugs.webkit.org/show_bug.cgi?id=268906

    Reviewed by Xabier Rodriguez-Calvar.

    Flaky crashes were triggered when the codecPreferencesChanged() was called while the blocking pad
    probe was still active. We now prevent re-entry when this is the case.

    * LayoutTests/platform/glib/TestExpectations:
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::start):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::setSinkPad):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::teardown):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::codecPreferencesChanged):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.h:

    Canonical link: https://commits.webkit.org/274614@main